# hardware-solvro-bot-office-cam

./: .gitignore  README.md  analyze_mse.py  install.sh  main.py  motion_detect.py  motion_detect.service  pyproject.toml
models/yolo11n_ncnn_model/: metadata.yaml
person_trackers/: bytetrack.yaml  person_tracker.py  yolo_bytetracker.py
src/solvro_cam/: __main__.py  cli.py  main.py  solvrocam.py
src/solvro_cam/person_trackers/: yolo_bytetracker.py
src/solvro_cam/person_trackers/models/yolo11n_ncnn_model/: model_ncnn.py
src/solvrocam/: __main__.py  cli.py  core.py  debounce.py  debug.py  detection.py  file.py  logs.py  picam.py  preview.py  processing.py  solvrocam.py
src/solvrocam/person_trackers/: person_tracker.py  yolo_bytetracker.py
src/solvrocam/person_trackers/models/yolo11n_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
