[project]
name = "hardware-solvro-bot-office-cam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "lap>=0.5.12",
    "ncnn>=1.0.20250503",
    "simplejpeg>=1.8.2",
    "ultralytics>=8.3.128",
]

[dependency-groups]
dev = [
    "numpy>=2.2.5",
    "ruff>=0.11.8",
]
